--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-ts-webpack",
   "version": "0.0.1",
   "scripts": {
+    "lint": "eslint 'src/**/*.ts'",
     "start": "webpack serve --config webpack.dev.config.ts",
     "build": "webpack --config webpack.prod.config.ts",
     "test": "jest"
