--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
