--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,9 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.7.0",
     "ts-node": "^10.4.0"
   }
 }
