--- a/backend/package.json
+++ b/backend/package.json
@@ -4,22 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node ./src/app.ts",
+    "build": "tsc",
+    "start": "ENV_FILE=./config/.env.prod node -r tsconfig-paths/register ./build/app.js",
+    "dev": "ENV_FILE=./config/.env.dev ts-node -r tsconfig-paths/register ./src/app.ts",
     "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/dotenv-parse-variables": "^2.0.1",
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.8",
     "@types/validator": "^13.7.1",
     "@types/yamljs": "^0.2.31",
     "connect": "^3.7.0",
+    "dotenv-extended": "^2.9.0",
+    "dotenv-parse-variables": "^2.0.0",
     "express": "^4.17.2",
     "express-openapi-validator": "^4.13.5",
+    "morgan": "^1.10.0",
+    "morgan-body": "^2.6.6",
     "swagger-routes-express": "^3.3.1",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.4",
     "validator": "^13.7.0",
+    "winston": "^3.4.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
