--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "ENV_FILE=./config/.env.prod node -r tsconfig-paths/register ./build/app.js",
     "dev": "ENV_FILE=./config/.env.dev ts-node -r tsconfig-paths/register ./src/app.ts",
-    "test": "jest"
+    "test:unit": "ENV_FILE=./config/.env.test jest"
   },
   "author": "",
   "license": "ISC",
@@ -27,15 +27,20 @@
     "morgan-body": "^2.6.6",
     "swagger-routes-express": "^3.3.1",
     "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.5.4",
     "validator": "^13.7.0",
     "winston": "^3.4.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.7.0",
-    "ts-node": "^10.4.0"
+    "jest": "^27.4.7",
+    "supertest": "^6.2.1",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
